spring-cloud-gateway/spring-cloud-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scg
  namespace: pilot
  labels:
    app: scg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scg
  template:
    metadata:
      labels:
        app: scg
    spec:
      containers:
      - name: scg
        image: doldoleo/spring-cloud-gateway:latest
        ports:
        - containerPort: 9000
