spring-cloud-gateway/user-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
