spring-cloud-gateway/spring-cloud-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-scg
  namespace: pilot
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /scg(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: scg
            port:
              number: 80
